php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #45779 regression with shebang lines processing
Submitted: 2008-08-10 14:31 UTC Modified: 2008-08-12 16:46 UTC
From: pajoye@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3CVS-2008-08-10 OS: Windows
Private report: No CVE-ID: None
 [2008-08-10 14:31 UTC] pajoye@php.net
Description:
------------
tests\lang\comments.php fails. There is a regression between 5.2.x and 5.3 on how the shebang line is processed.

5.2.x ignores only the first line, 5.3.x ignores the first two lines.

Reproduce code:
---------------
See tests\lang\comments.php


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-08-12 14:26 UTC] jani@php.net
Dmitry, please check this out.
 [2008-08-12 16:46 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 02 02:00:02 2026 UTC