Fixed bug #45779 (regression with shebang lines processing)