sapi/cli/php_cli.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_cli.c,v 1.129.2.13.2.22.2.12 2008/07/25 15:05:48 tony2001 Exp $ */
+/* $Id: php_cli.c,v 1.129.2.13.2.22.2.13 2008/08/12 16:43:52 dmitry Exp $ */
 
 #include "php.h"
 #include "php_globals.h"
@@ -575,23 +575,6 @@ static int cli_seek_file_begin(zend_file_handle *file_handle, char *script_file,
 		return FAILURE;
 	}
 	file_handle->filename = script_file;
-	/* #!php support */
-	c = fgetc(file_handle->handle.fp);
-	if (c == '#') {
-		while (c != '\n' && c != '\r') {
-			c = fgetc(file_handle->handle.fp);	/* skip to end of line */
-		}
-		/* handle situations where line is terminated by \r\n */
-		if (c == '\r') {
-			if (fgetc(file_handle->handle.fp) != '\n') {
-				long pos = ftell(file_handle->handle.fp);
-				fseek(file_handle->handle.fp, pos - 1, SEEK_SET);
-			}
-		}
-		*lineno = 2;
-	} else {
-		rewind(file_handle->handle.fp);
-	}
 	return SUCCESS;
 }
 /* }}} */
